--- a/pages/1594.html
+++ b/pages/1594.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/3428/#Item_12" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/3428/#Item_13" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -317,7 +317,12 @@ margin-left: 0em;
 
 <h4 id="geometry">Geometry</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/higher+geometry">higher geometry</a></strong> / <strong><a class="existingWikiWord" href="/nlab/show/derived+geometry">derived geometry</a></strong></p><h2 id="ingredients">Ingredients</h2><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/higher+geometry">higher geometry</a></strong> / <strong><a class="existingWikiWord" href="/nlab/show/derived+geometry">derived geometry</a></strong></p>
+
+<h2 id="ingredients">Ingredients</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/higher+topos+theory">higher topos theory</a></p>
 </li>
@@ -325,7 +330,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/higher+algebra">higher algebra</a></p>
 </li>
-</ul><h2 id="concepts">Concepts</h2><ul>
+</ul>
+
+<h2 id="concepts">Concepts</h2>
+
+<ul>
 <li>
 <p><strong>geometric <a class="existingWikiWord" href="/nlab/show/big+and+little+toposes">little</a> <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-topos">(∞,1)-topos</a>es</strong></p>
 
@@ -359,7 +368,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/geometric+%E2%88%9E-stacks">geometric ∞-stacks</a></li>
 </ul>
 </li>
-</ul><h2 id="constructions">Constructions</h2><ul>
+</ul>
+
+<h2 id="constructions">Constructions</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/loop+space+object">loop space object</a>, <a class="existingWikiWord" href="/nlab/show/free+loop+space+object">free loop space object</a></p>
 </li>
@@ -367,7 +380,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/fundamental+%E2%88%9E-groupoid+in+a+locally+%E2%88%9E-connected+%28%E2%88%9E%2C1%29-topos">fundamental ∞-groupoid in a locally ∞-connected (∞,1)-topos</a> / <a class="existingWikiWord" href="/nlab/show/fundamental+%E2%88%9E-groupoid+of+a+locally+%E2%88%9E-connected+%28%E2%88%9E%2C1%29-topos">of a locally ∞-connected (∞,1)-topos</a></p>
 </li>
-</ul><h2 id="examples">Examples</h2><ul>
+</ul>
+
+<h2 id="examples">Examples</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/derived+algebraic+geometry">derived algebraic geometry</a></p>
 
@@ -427,7 +444,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/higher+Cartan+geometry">higher Cartan geometry</a></p>
 </li>
-</ul><h2 id="theorems">Theorems</h2><ul>
+</ul>
+
+<h2 id="theorems">Theorems</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Isbell+duality">Isbell duality</a></p>
 </li>
@@ -439,15 +460,24 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Tannaka+duality+for+geometric+stacks">Tannaka duality for geometric stacks</a></p>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/higher+geometry+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 
 <h4 id="lie_theory"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>∞</mn></mrow><annotation encoding="application/x-tex">\infty</annotation></semantics></math>-Lie theory</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/%E2%88%9E-Lie+theory">∞-Lie theory</a></strong> (<a class="existingWikiWord" href="/nlab/show/higher+geometry">higher geometry</a>)</p><h2 id="background">Background</h2><h3 id="smooth_structure">Smooth structure</h3><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/%E2%88%9E-Lie+theory">∞-Lie theory</a></strong> (<a class="existingWikiWord" href="/nlab/show/higher+geometry">higher geometry</a>)</p>
+
+<h2 id="background">Background</h2>
+
+<h3 id="smooth_structure">Smooth structure</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/generalized+smooth+space">generalized smooth space</a></p>
 
@@ -481,7 +511,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/synthetic+differential+%E2%88%9E-groupoid">synthetic differential ∞-groupoid</a></p>
 </li>
-</ul><h3 id="higher_groupoids">Higher groupoids</h3><ul>
+</ul>
+
+<h3 id="higher_groupoids">Higher groupoids</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/%E2%88%9E-groupoid">∞-groupoid</a></p>
 
@@ -511,7 +545,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/simplicial+group">simplicial group</a></li>
 </ul>
 </li>
-</ul><h3 id="lie_theory">Lie theory</h3><ul>
+</ul>
+
+<h3 id="lie_theory">Lie theory</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Lie+theory">Lie theory</a></p>
 
@@ -529,7 +567,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="lie_groupoids">∞-Lie groupoids</h2><ul>
+</ul>
+
+<h2 id="lie_groupoids">∞-Lie groupoids</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/%E2%88%9E-Lie+groupoid">∞-Lie groupoid</a></p>
 
@@ -571,7 +613,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="lie_algebroids">∞-Lie algebroids</h2><ul>
+</ul>
+
+<h2 id="lie_algebroids">∞-Lie algebroids</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/%E2%88%9E-Lie+algebroid">∞-Lie algebroid</a></p>
 
@@ -635,9 +681,17 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/super+Lie+algebra">super Lie algebra</a></li>
 </ul>
 </li>
-</ul><h2 id="formal_lie_groupoids">Formal Lie groupoids</h2><ul>
+</ul>
+
+<h2 id="formal_lie_groupoids">Formal Lie groupoids</h2>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/formal+group">formal group</a>, <a class="existingWikiWord" href="/nlab/show/formal+groupoid">formal groupoid</a></li>
-</ul><h2 id="cohomology">Cohomology</h2><ul>
+</ul>
+
+<h2 id="cohomology">Cohomology</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Lie+algebra+cohomology">Lie algebra cohomology</a></p>
 
@@ -663,11 +717,25 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/nonabelian+Lie+algebra+cohomology">nonabelian Lie algebra cohomology</a></p>
 </li>
-</ul><h2 id="homotopy">Homotopy</h2><ul>
+</ul>
+
+<h2 id="homotopy">Homotopy</h2>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/homotopy+groups+of+a+Lie+groupoid">homotopy groups of a Lie groupoid</a></li>
-</ul><h2 id="related_topics">Related topics</h2><ul>
+</ul>
+
+<h2 id="related_topics">Related topics</h2>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/%E2%88%9E-Chern-Weil+theory">∞-Chern-Weil theory</a></li>
-</ul><h2 id="examples">Examples</h2><h3 id="lie_groupoids_2"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>∞</mn></mrow><annotation encoding="application/x-tex">\infty</annotation></semantics></math>-Lie groupoids</h3><ul>
+</ul>
+
+<h2 id="examples">Examples</h2>
+
+<h3 id="lie_groupoids_2"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>∞</mn></mrow><annotation encoding="application/x-tex">\infty</annotation></semantics></math>-Lie groupoids</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Atiyah+Lie+groupoid">Atiyah Lie groupoid</a></p>
 </li>
@@ -689,7 +757,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/principal+%E2%88%9E-bundle">smooth principal ∞-bundle</a></p>
 </li>
-</ul><h3 id="lie_groups"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>∞</mn></mrow><annotation encoding="application/x-tex">\infty</annotation></semantics></math>-Lie groups</h3><ul>
+</ul>
+
+<h3 id="lie_groups"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>∞</mn></mrow><annotation encoding="application/x-tex">\infty</annotation></semantics></math>-Lie groups</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/orthogonal+group">orthogonal group</a></p>
 
@@ -727,7 +799,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/circle+group">circle group</a></li>
 </ul>
 </li>
-</ul><h3 id="lie_algebroids_2"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>∞</mn></mrow><annotation encoding="application/x-tex">\infty</annotation></semantics></math>-Lie algebroids</h3><ul>
+</ul>
+
+<h3 id="lie_algebroids_2"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>∞</mn></mrow><annotation encoding="application/x-tex">\infty</annotation></semantics></math>-Lie algebroids</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/tangent+Lie+algebroid">tangent Lie algebroid</a></p>
 </li>
@@ -761,7 +837,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h3 id="lie_algebras"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>∞</mn></mrow><annotation encoding="application/x-tex">\infty</annotation></semantics></math>-Lie algebras</h3><ul>
+</ul>
+
+<h3 id="lie_algebras"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>∞</mn></mrow><annotation encoding="application/x-tex">\infty</annotation></semantics></math>-Lie algebras</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/general+linear+Lie+algebra">general linear Lie algebra</a></p>
 </li>
@@ -797,11 +877,12 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/line+Lie+n-algebra">line Lie n-algebra</a></p>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/infinity-Lie+theory+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
@@ -1129,6 +1210,24 @@ margin-left: 0em;
 
 <p>See also the references at <em><a class="existingWikiWord" href="/nlab/show/fractional+D-brane">fractional D-brane</a></em>.</p>
 
+<p>Review of orbifolds in the context of string compactifications includes</p>
+
+<ul>
+<li>Susanne Reffert, <em>The Geometer’s Toolkit to String Compactifications</em>, lectures at <em><a href="https://www.ggi.infn.it/showevent.pl?id=11">String and M theory approaches to particle physics and cosmology</a></em>, 2007 (<a href="https://arxiv.org/abs/0706.1310">arXiv:0706.1310</a>)</li>
+</ul>
+
+<p>and for orbifolds of <a class="existingWikiWord" href="/nlab/show/G2-manifolds">G2-manifolds</a> for <a class="existingWikiWord" href="/nlab/show/M-theory+on+G2-manifolds">M-theory on G2-manifolds</a></p>
+
+<ul>
+<li id="Reidegeld15">
+<p><a class="existingWikiWord" href="/nlab/show/Frank+Reidegeld">Frank Reidegeld</a>, <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">G_2</annotation></semantics></math>-orbifolds from K3 surfaces with ADE-singularities</em> (<a href="http://arxiv.org/abs/1512.05114">arXiv:1512.05114</a>)</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Frank+Reidegeld">Frank Reidegeld</a>, <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">G_2</annotation></semantics></math>-orbifolds with ADE-singularities</em> (<a href="https://core.ac.uk/download/pdf/159317626.pdf">pdf</a>)</p>
+</li>
+</ul>
+
 <p>For <a class="existingWikiWord" href="/nlab/show/topological+strings">topological strings</a> the <a class="existingWikiWord" href="/nlab/show/path+integral+as+a+pull-push+transform">path integral as a pull-push transform</a> for target orbifolds – in analogy to what <a class="existingWikiWord" href="/nlab/show/Gromov-Witten+theory">Gromov-Witten theory</a> is for <a class="existingWikiWord" href="/nlab/show/Deligne-Mumford+stacks">Deligne-Mumford stacks</a> – has first been considered in</p>
 
 <ul>
@@ -1146,14 +1245,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 29, 2018 at 08:51:36.
+  Last revised on December  8, 2018 at 12:24:03.
   See the <a href="https://ncatlab.org/nlab/history/orbifold" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/orbifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orbifold/51" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(51 revisions)</span> | <a href="/nlab/show/diff/orbifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orbifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/orbifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orbifold/52" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(52 revisions)</span> | <a href="/nlab/show/diff/orbifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orbifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/orbifold/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
