--- a/pages/19583.html
+++ b/pages/19583.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1436,7 +1436,13 @@ margin-left: 0em;
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/AdS-CFT+in+condensed+matter+physics">AdS-CFT in condensed matter physics</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/AdS-CFT+in+condensed+matter+physics">AdS-CFT in condensed matter physics</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/AdS-QCD+correspondence">AdS-QCD correspondence</a></p>
+</li>
 </ul>
 
 <h2 id="references">References</h2>
@@ -1488,7 +1494,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  8, 2018 at 11:59:46.
+  Last revised on December  8, 2018 at 12:00:21.
   See the <a href="https://ncatlab.org/nlab/history/Sachdev-Ye-Kitaev model" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
