--- a/pages/19903.html
+++ b/pages/19903.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9224/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9224/#Item_10" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -317,7 +317,13 @@ margin-left: 0em;
 
 <h4 id="category_theory">Category theory</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/category+theory">category theory</a></strong></p><h2 id="concepts">Concepts</h2><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/category+theory">category theory</a></strong></p>
+
+<h2 id="concepts">Concepts</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/category">category</a></p>
 </li>
@@ -333,7 +339,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Cat">Cat</a></p>
 </li>
-</ul><h2 id="universal_constructions">Universal constructions</h2><ul>
+</ul>
+
+<h2 id="universal_constructions">Universal constructions</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/universal+construction">universal construction</a></p>
 
@@ -363,7 +373,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="theorems">Theorems</h2><ul>
+</ul>
+
+<h2 id="theorems">Theorems</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Yoneda+lemma">Yoneda lemma</a></p>
 </li>
@@ -407,7 +421,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/relation+between+type+theory+and+category+theory">relation between type theory and category theory</a></p>
 </li>
-</ul><h2 id="extensions">Extensions</h2><ul>
+</ul>
+
+<h2 id="extensions">Extensions</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/sheaf+and+topos+theory">sheaf and topos theory</a></p>
 </li>
@@ -419,13 +437,18 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/higher+category+theory">higher category theory</a></p>
 </li>
-</ul><h2 id="applications">Applications</h2><ul>
+</ul>
+
+<h2 id="applications">Applications</h2>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/applications+of+%28higher%29+category+theory">applications of (higher) category theory</a></li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/category+theory+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
@@ -565,6 +588,10 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/John+C.+Baez">John C. Baez</a>, <span class="newWikiWord">Brendan Fong<a href="/nlab/new/Brendan+Fong">?</a></span> and <span class="newWikiWord">Blake Pollard<a href="/nlab/new/Blake+Pollard">?</a></span>, <em>A Compositional Framework for Markov Processes</em>, <a href="https://arxiv.org/abs/1508.06448">arXiv:1508.06448</a></p>
 </li>
+
+<li>
+<p><span class="newWikiWord">Jules Hedges<a href="/nlab/new/Jules+Hedges">?</a></span> and <span class="newWikiWord">Martha Lewis<a href="/nlab/new/Martha+Lewis">?</a></span>, <em>Towards Functorial Language-Games</em>, <a href="https://arxiv.org/abs/1807.07828">arXiv:1807.07828</a></p>
+</li>
 </ul>
 </body></html>
 
@@ -572,14 +599,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  3, 2018 at 12:05:03.
+  Last revised on December  9, 2018 at 01:15:13.
   See the <a href="https://ncatlab.org/nlab/history/applied category theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/applied+category+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/applied+category+theory/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/applied+category+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/applied+category+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/applied+category+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/applied+category+theory/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/applied+category+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/applied+category+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/applied category theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
